[tool.poetry]
name = "repl_nix_lovelace-server"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-HTTPAuth = "^4.7.0"
python-json-logger = "^2.0.4"
Flask-Limiter = "^3.1.0"
Flask = "^2.2.2"
prometheus-flask-exporter = "^0.21.0"
Flask-MonitoringDashboard = "^3.1.1"
python-dotenv = "^0.21.1"
validate_email = "^1.3"
bson = "^0.5.10"
argon2 = "^0.1.10"
Flask-SocketIO = "^5.3.2"
pymongo = "^4.3.3"
jwt = "^1.3.1"
certifi = "^2022.12.7"
pyotp = "^2.8.0"
Flask-Mail = "^0.9.1"
flask-expects-json = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
